[workspace]
members = [
    "demo/android/rust",
    "demo/common",
    "demo/magicleap",
    "demo/native",
    "demo/native-turtle",
    "geometry",
    "gl",
    "gpu",
    "renderer",
    "simd",
    "svg",
    "turtle",
    "ui",
    "utils/area-lut",
    "utils/gamma-lut",
    "utils/svg-to-skia",
    "uturtle"
]
