[package]
name = "pathfinder_turtle"
version = "0.1.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>", "Kerem Kat <keremkat@gmail.com>"]

[dependencies]
bitflags = "1.0"
usvg = "0.4"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_renderer]
path = "../renderer"

[dependencies.uturtle]
path = "../uturtle"